--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  --font-ibm-plex-mono: '';
+  --font-ibm-plex-sans: '';
 }
 
 @media (prefers-color-scheme: dark) {
